tests/ui/issues/issue-17758.stderr
error: lifetime may not live long enough
  --> $DIR/issue-17758.rs:7:9
   |
LL | trait Foo<'a> {
   |           -- lifetime `'a` defined here
LL |     fn foo(&'a self);
LL |     fn bar(&self) {
   |            - let's call the lifetime of this reference `'1`
LL |         self.foo();
   |         ^^^^^^^^^^ argument requires that `'1` must outlive `'a`

error: aborting due to 1 previous error

